--- a/gradle.properties
+++ b/gradle.properties
@@ -17,14 +17,14 @@ minecraft_version=1.21
 # as they do not follow standard versioning conventions.
 minecraft_version_range=[1.21,1.21.1)
 # The Neo version must agree with the Minecraft version to get a valid artifact
-neo_version=21.0.113-beta
+neo_version=21.0.148
 # The Neo version range can use any version of Neo as bounds
 neo_version_range=[21.0.0-beta,)
 # The loader version range can only use the major version of FML as bounds
 loader_version_range=[4,)
 
-jei_version=19.0.0.16
-top_version=1.21_neo-12.0.0-1
+jei_version=19.5.3.67
+top_version=1.21_neo-12.0.3-5
 
 ## Mod Properties
 
