--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,14 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
-      - name: Build with Gradle
+      - name: Setup gradle
         uses: gradle/actions/setup-gradle@v3
-        with:
-          arguments: build
+		
+	  - name: Build with Gradle
+	  	run: ./gradlew build
+	
+	  - name: Upload artifact
+	  	uses: actions/upload-artifact@v4
+		with: 
+			name: builds
+			path: /build/libs/
