--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,9 +17,11 @@ jobs:
                 java-version: '21'
                 distribution: 'temurin'
             - name: Setup Gradle
-              uses: gradle/actions/setup-gradle@v3		
+              uses: gradle/actions/setup-gradle@v3
+              with: 
+                gradle-version: 8.8
             - name: Build with Gradle
-              run: ./gradlew build
+              run: gradle build
             - name: Upload artifact
               uses: actions/upload-artifact@v4
               with: 
