--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,4 +26,4 @@ jobs:
               uses: actions/upload-artifact@v4
               with: 
                 name: builds
-                path: /build/libs/
+                path: ./build/libs/
